removi o titulo duplicado

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@ introducao de desenvolvimento web:
   
 
 
- <h1>HTML:  APRENDI A TECNICA DE TEG:</h1>
+ 
  <li>H1</li>
  <li>UL</li>
  <l1>LI</l1>
@@ -110,7 +110,9 @@ introducao de desenvolvimento web:
 </table>
 
  
+<script>
 
+</script>
 
 
  
