adicionei o javascript  ao projeto

--- a/public/index.html
+++ b/public/index.html
@@ -108,9 +108,15 @@ introducao de desenvolvimento web:
     </tr>
     </tbody>
 </table>
-
+<button>clique-me</button>
  
 <script>
+    const button= document.querySelector("button")
+
+function digaOla () {
+alert("Ola ")  
+  }
+button.onclick=digaOla
 
 </script>
 
